Show available stores on MainMenuActivity